Update navbar and heading colors to match new design

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -18,7 +18,7 @@
             padding-top: 40px; /* Added padding to top to avoid overlap with menu bar */
         }
         .navbar {
-            background-color: #0056b3;
+            background-color: #f4993e;
             color: #fff;
             width: 100%;
             padding: 10px 20px;
@@ -56,8 +56,8 @@
             margin-top: 20px;
         }
         h2 {
-            color: #0056b3;
-            border-bottom: 2px solid #0056b3;
+            color: #f4993e;
+            border-bottom: 2px solid #f4993e;
             padding-bottom: 5px;
         }
         ul {
