feat: Corregir enlace de Twitter en el pie de página

--- a/HTML_Y_CSS/index.html
+++ b/HTML_Y_CSS/index.html
@@ -121,7 +121,7 @@
         <div class="footer__social">
             <a href="#" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
             <a href="#" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
-            <a href="#" the "footer__icon"><i class='bx bxl-twitter' ></i></a>
+            <a href="#" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
         </div>
         <p class="footer__copy">&#169; 2024 Esteban Barrios. Todos los derechos reservados</p>
     </footer>
