feat: Actualizar enlaces de LinkedIn y GitHub en la página de inicio

--- a/HTML_Y_CSS/index.html
+++ b/HTML_Y_CSS/index.html
@@ -36,8 +36,8 @@
                 <a href="#contact" class="button">Contacto</a>
             </div>
             <div class="home__social">
-                <a href="tu_linkedin" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                <a href="tu_github" class="home__social-icon"><i class='bx bxl-github' ></i></a>
+                <a href="https://www.linkedin.com/in/esteban-david-barrios-guardia-30636b128/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://github.com/tebareinyu" class="home__social-icon"><i class='bx bxl-github' ></i></a>
             </div>
         </section>
 
